Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ html,body {
     box-shadow: inset 8px 8px 16px 0 rgba(0, 0, 0, 0.2),
     inset -8px -8px 16px 0 rgba(31, 31, 31, 0.4);
     padding: 2vh;
-    margin-top: 3vh;
+    margin-top: 4vh;
     margin-bottom: 3vh;
 }
 .bio-text {
@@ -87,8 +87,11 @@ html,body {
     flex: 3;
 }
 .conclusion {
-    padding: 2vh;
+    padding-left: 2vh;
     text-align: left;
+}
+.resume-wrapper {
+    padding-top: 1.7vh;
 }
 .contact {
     color: rgb(6, 103, 230);
@@ -121,7 +124,6 @@ html,body {
 .place {
     display: flex;
     flex-direction: column;
-    height: 3vh;
     padding: 8px;
     padding-right: 2vh;
     padding-left: 2vh;
@@ -129,6 +131,7 @@ html,body {
     border-radius: 10px;
     margin-right: 0.5vh;
     background-color: rgb(17, 17, 17);
+    min-height: 3vh;
 }
 .work-container {
     padding-top: 5vh;
@@ -148,14 +151,15 @@ html,body {
 }
 .award-left {
     margin-top: 1vh;
-    margin-left: 5vh;
+    margin-left: 3vh;
     padding: 2vh;
     width: 50%;
     height: 100%;
 }
 .award-right {
     margin-top: 1vh;
-    margin-left: 5vh;
+    margin-left: 3vh;
+    margin-bottom: 3vh;
     padding: 2vh;
     width: 50%;
     height: 100%;
@@ -188,6 +192,7 @@ html,body {
     flex-direction: row;
     align-items: center;
     height: 3vh;
+    margin-bottom: 0.7vh;
 }
 .work-img {
     background-color: rgb(14, 13, 13);
